<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correctToast">Correct</string>
    <string name="incorrectToast">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="action_settings">Settings</string>
    <string name="question_ocean">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="previous_button">Previous</string>
    <string name="title_activity_cheat">Cheat</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgement_toast">Cheating is wrong</string>
</resources>